# emotechat-backend

./: .env.example  .gitlab-ci.yml  Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/database/: mod.rs  mongo.rs
src/database/models/: emote.rs  mod.rs
src/routes/: error.rs  mod.rs
src/routes/v1/: emotes.rs  mod.rs
src/util/: base62.rs  emote.rs  mod.rs
