[package]
name = "emotechat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["normalize-path"] }
tower-layer = "0.3.2"
